<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/detail_objectif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_titre_detail"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/But"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_titre_detail"
        android:id="@+id/tv_but_obj"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et_contenu_obj"
        android:layout_below="@id/tv_but_obj"
        android:text="CECI EST LE DETAIL TEMPORAIRE DU LAYOUT EN ATTENDANT D'AVOIR UN SUPER BINDIIIIIIIIIIIIING ET TOUT CA TOUT CA"
        android:textAlignment="center" />

    <TextView
        android:text="@string/dead_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_contenu_obj"
        android:id="@+id/tv_date"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="Date TEMPORAIREUUUH"
        android:layout_below="@id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_alignParentBottom="true">


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/bt_return_main_layout"
            android:onClick="onClick_return"
            android:text="@string/retour" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_obj"
            android:onClick="onClick_delete_and_return"
            android:text="@string/supprimer" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/bt_valid_obj"
            android:onClick="onClick_valid_and_return"
            android:text="@string/valider" />

    </LinearLayout>

</RelativeLayout>