<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:text="@string/newObj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nouv_objectif"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:ems="10"
                android:id="@+id/titre_new_obj"
                android:hint="@string/Titre"
                android:layout_below="@id/tv_nouv_objectif"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/titre_new_obj"
                android:id="@+id/et_contenu_new_obj"
                android:hint="@string/Contenu" />


            <TextView
                android:text="@string/SelectionnerDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_selection_date"
                android:layout_below="@+id/et_contenu_new_obj"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dp_date_new_obj"
                android:layout_below="@id/tv_selection_date"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:id="@+id/bt_return_main_layout"
                android:text="@string/retour" />

            <Button
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:id="@+id/bt_valid_new_obj"
                android:text="@string/valider" />

    </LinearLayout>


</RelativeLayout>